--- a/Clase4/reto-final/src/App.css
+++ b/Clase4/reto-final/src/App.css
@@ -98,10 +98,11 @@ h1 {
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
+  
 }
 button{
   width: 200px;
   height: 20px;
   border: none;
-  border-radius: 15px;;
+  border-radius: 15px;
 }
